Made language button functional, needs GUI fixes still

--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -11,10 +11,17 @@ Settings = Configuración
 #
 # Instructions
 #
-
+IntroHeading = Bienvenidos a VOOGA.
+IntroBody = Spanish
+AuthoringHeading = Spanish
+AuthoringBody = Spanish
+PlayerHeading = Spanish
+PlayerBody = Spanish
+FAQHeading = Spanish
+FAQBody = Spanish
 #
 # Settings
 #
-Language = Language
+Language = Idioma
 English = Inglés
 Spanish = Español
