Added comments to GUI code

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -13,7 +13,7 @@ Settings = Settings
 #
 IntroHeading = Welcome to VOOGA.
 IntroBody = VOOGA is an expansive game authoring environment that allows you to create, save, and then play any game. \
-			Let's go over the best practices when using it.
+			Let us go over the best practices when using it.
 AuthoringHeading = Authoring Games
 AuthoringBody = Authoring is the primary function of VOOGA. The authoring environment can be accessed by selecting on 'Create' in the main menu. \
 				From there, you can...
