Added Play button binding

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -32,3 +32,8 @@ FAQBody = Q: Can I create games other than RPGs? \n\
 Language = Language
 English = English
 Spanish = Spanish
+#
+# Play
+#
+NewGame = New Game
+ContinueGame = Continue Game
