--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -25,3 +25,9 @@ FAQBody = Spanish
 Language = Idioma
 English = Inglés
 Spanish = Español
+
+#
+# Play
+#
+NewGame = Nuevo Juego
+ContinueGame = Continua el Juego
