Added the authoring view selection menu, began restyling authoring environment

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -37,3 +37,17 @@ Spanish = Spanish
 #
 NewGame = New Game
 ContinueGame = Continue Game
+
+#
+# Authoring
+#
+File = File
+Settings = Settings
+MapEditor = Map Editor
+SpriteCreator = Sprite Creator
+PanelCreator = Panel Creator
+Custom = Custom
+Cutscenes = Cutscenes
+Dialogue = Dialogue
+HUD = Heads Up Display
+Inventory = Inventory
