#16 Added functionality to view toggle, refactored main authoring to allow for multiple views

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -45,9 +45,9 @@ File = File
 Settings = Settings
 MapEditor = Map Editor
 SpriteCreator = Sprite Creator
-PanelCreator = Panel Creator
-Custom = Custom
+CustomPanel = Custom Panel
 Cutscenes = Cutscenes
 Dialogue = Dialogue
 HUD = Heads Up Display
 Inventory = Inventory
+MenuCreator = Menu Creator
