#15 Changed authoring to allow for panes, bound toolbar strings for language flexibility

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -37,12 +37,20 @@ Spanish = Spanish
 #
 NewGame = New Game
 ContinueGame = Continue Game
-
 #
-# Authoring
+# Authoring Toolbar
 #
 File = File
+Save = Save
+Import = Import
+Exit = Exit
+Views = Views
+ElementViewer = Element Viewer
+MapViewer = Map Viewer
 Settings = Settings
+#
+# Map Editor
+#
 MapEditor = Map Editor
 SpriteCreator = Sprite Creator
 CustomPanel = Custom Panel
