--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -31,3 +31,14 @@ Spanish = Español
 #
 NewGame = Nuevo Juego
 ContinueGame = Continua el Juego
+#
+# Authoring Toolbar
+#
+File = Spanish
+Save = Spanish
+Import = Spanish
+Exit = Spanish
+Views = Views
+ElementViewer = Element Viewer
+MapViewer = Map Viewer
+Settings = Settings
