#15 redesigned the map editor

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -51,6 +51,22 @@ Settings = Settings
 #
 # Map Editor
 #
+Map = Map
+#
+# Display Panel
+#
+
+#
+# Game Element Selector/Object Viewer
+#
+Sprites = Sprites
+Dialogues = Dialogues
+Default = Default
+User = User
+Imported = Imported
+#
+# View Side Bar
+#
 MapEditor = Map Editor
 SpriteCreator = Sprite Creator
 CustomPanel = Custom Panel
