#15 moved map editing environment and resized panels

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -24,8 +24,9 @@ PlayerBody = Once you finish building and subsequently saving your game, you can
 			Otherwise, there is the option to start the game from the beginning, which is "New Game."
 FAQHeading = FAQ
 FAQBody = Q: Can I create games other than RPGs? \n\
-		A: As of now, the primary game type VOOGA supports is the RPG. \
-		However, the current functionality extends itself quite well to other genres such as puzzle games.
+		A: Fortunately, VOOGA was built with a great deal of flexibility. \
+		Although the primarily purpose of VOOGA was for RPGs, we currently support platformer games, \
+		and our functionality extends itself quite well to other genres such as puzzle games.
 #
 # Settings
 #
