Added Dialog Editor

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -59,3 +59,15 @@ Dialogue = Dialogue
 HUD = Heads Up Display
 Inventory = Inventory
 MenuCreator = Menu Creator
+#
+# Dialogue Editor
+#
+Name = Name: 
+Font = Font: 
+FontSize = Font Size: 
+NumberOfPanels = Number of Panels: 
+AddPanel = Add Panel
+RemovePanel = Remove Panel
+Save = Save
+Next = Next
+Previous = Previous
