--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -42,3 +42,15 @@ Views = Views
 ElementViewer = Element Viewer
 MapViewer = Map Viewer
 Settings = Settings
+#
+# Dialog Editor
+#
+Name = Nombre: 
+Font = Tipo de letra: 
+FontSize = tamaño die tipo de letra: 
+NumberOfPanels = Número de paneles:
+AddPanel = Agregar panel
+RemovePanel = Eliminar panel
+Save = Archivar
+Next = Siguiente
+Previous = Previo
