#16 styling map manager and fixed animation loading

--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -35,6 +35,7 @@ ContinueGame = Continua el Juego
 # Authoring Toolbar
 #
 File = Spanish
+Load = Spanish
 Save = Spanish
 Import = Spanish
 Exit = Spanish
