#16 continued the styling of map editor

--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -48,7 +48,7 @@ Settings = Settings
 #
 Name = Nombre: 
 Font = Tipo de letra: 
-FontSize = tamaño die tipo de letra: 
+FontSize = Tamaño de tipo de letra: 
 NumberOfPanels = Número de paneles:
 AddPanel = Agregar panel
 RemovePanel = Eliminar panel
