Created stirng bindings #28

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -80,6 +80,8 @@ MenuCreator = Menu Creator
 #
 # Dialogue Editor
 #
+DefaultDialogues = Default Dialogues
+UserCreatedDialogues = User Created Dialogues
 Name = Name: 
 Font = Font: 
 FontSize = Font Size: 
@@ -89,4 +91,5 @@ RemovePanel = Remove Panel
 Save = Save
 Next = Next
 Previous = Previous
-New = New 
+New = New
+InputInteger = Please enter an integer
