--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -46,6 +46,8 @@ Settings = Settings
 #
 # Dialog Editor
 #
+DefaultDialogues = diálogos predeterminados
+UserCreatedDialogues = diálogos creados por el usuario
 Name = Nombre: 
 Font = Tipo de letra: 
 FontSize = tamaño die tipo de letra: 
@@ -56,6 +58,7 @@ Save = Archivar
 Next = Siguiente
 Previous = Previo
 New = Nuevo
+InputInteger = Introduzca un entero
 #
 # Map Editor
 #
