--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -54,6 +54,7 @@ Settings = Settings
 # Map Editor
 #
 Map = Map
+EnterDouble = Please enter a double
 #
 # Display Panel
 #
@@ -93,3 +94,4 @@ Next = Next
 Previous = Previous
 New = New
 InputInteger = Please enter an integer
+InvalidInput = Invalid input
