--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -59,7 +59,9 @@ Next = Siguiente
 Previous = Previo
 New = Nuevo
 InputInteger = Introduzca un entero
+InvalidInput = Entrada no válida
 #
 # Map Editor
 #
 Map = Mapa
+EnterDouble = por favor ingrese un doble
