Error checked input #26

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -95,3 +95,7 @@ Previous = Previous
 New = New
 InputInteger = Please enter an integer
 InvalidInput = Invalid input
+#
+# Action Editor
+#
+EmptyChoiceBox = Select all choice-boxes
