--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -65,3 +65,7 @@ InvalidInput = Entrada no válida
 #
 Map = Mapa
 EnterDouble = por favor ingrese un doble
+#
+# Action Editor
+#
+EmptyChoiceBox = Seleccionar todos los cuadros de opciones
