--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -49,8 +49,10 @@ Settings = Settings
 DefaultDialogues = diálogos predeterminados
 UserCreatedDialogues = diálogos creados por el usuario
 Name = Nombre: 
-Font = Tipo de letra: 
-FontSize = Tamaño de tipo de letra: 
+FontType = Tipo de fuente: 
+FontSize = Tamaño de la fuente: 
+FontColor = Color de fuente: 
+BackgroundColor = Color de fondo: 
 NumberOfPanels = Número de paneles:
 AddPanel = Agregar panel
 RemovePanel = Eliminar panel
