created condition treeview

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -117,6 +117,8 @@ New = New
 InputInteger = Please enter an integer
 InvalidInput = Invalid input
 #
-# Action Editor
+# Condition/Action Editor
 #
 EmptyChoiceBox = Select all choice-boxes
+EnterInteger = Input an integer
+EnterPriority = Enter a priority number (integer): 
