--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -68,6 +68,8 @@ InvalidInput = Entrada no válida
 Map = Mapa
 EnterDouble = por favor ingrese un doble
 #
-# Action Editor
+# Condition/Action Editor
 #
 EmptyChoiceBox = Seleccionar todos los cuadros de opciones
+EnterInteger = entrada de un entero
+EnterPriority = entrado un número de prioridad (entero): 
