Add boolean input functionality #26

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -121,4 +121,6 @@ InvalidInput = Invalid input
 #
 EmptyChoiceBox = Select all choice-boxes
 EnterInteger = Input an integer
+EnterDouble = Input a double
+EnterBoolean = Input a boolean
 EnterPriority = Enter a priority number (integer): 
