--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -66,10 +66,11 @@ InvalidInput = Entrada no válida
 # Map Editor
 #
 Map = Mapa
-EnterDouble = por favor ingrese un doble
 #
 # Condition/Action Editor
 #
 EmptyChoiceBox = Seleccionar todos los cuadros de opciones
 EnterInteger = entrada de un entero
+EnterDouble = entrada de un doble
+EnterBoolean = entrada de un booleano
 EnterPriority = entrado un número de prioridad (entero): 
