Added condition building window #26

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -123,4 +123,4 @@ EmptyChoiceBox = Select all choice-boxes
 EnterInteger = Input an integer
 EnterDouble = Input a double
 EnterBoolean = Input a boolean
-EnterPriority = Enter a priority number (integer): 
+EnterPriority = Priority number (integer): 
