error check action/condition inputs

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -116,6 +116,7 @@ Previous = Previous
 New = New
 InputInteger = Please enter an integer
 InvalidInput = Invalid input
+EnterValid = Enter valid inputs
 #
 # Condition/Action Editor
 #
