--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -62,6 +62,7 @@ Previous = Previo
 New = Nuevo
 InputInteger = Introduzca un entero
 InvalidInput = Entrada no válida
+EnterValid = Entrada una entrada válida
 #
 # Map Editor
 #
