benchmark for selecting existing parameters

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -120,7 +120,7 @@ EnterValid = Enter valid inputs
 #
 # Condition/Action Editor
 #
-EmptyChoiceBox = Select all choice-boxes
+EmptyInput = Empty inputs
 EnterInteger = Input an integer
 EnterDouble = Input a double
 EnterBoolean = Input a boolean
