--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -70,7 +70,7 @@ Map = Mapa
 #
 # Condition/Action Editor
 #
-EmptyChoiceBox = Seleccionar todos los cuadros de opciones
+EmptyInput = entrada vacía
 EnterInteger = entrada de un entero
 EnterDouble = entrada de un doble
 EnterBoolean = entrada de un booleano
