#28 Finished all errors for dialogue panes and sequences

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -114,6 +114,7 @@ Save = Save
 Next = Next
 Previous = Previous
 New = New
+Delete = Delete
 InputInteger = Please enter an integer
 InvalidInput = Invalid input
 EnterValid = Enter valid inputs
