Really djanky inheritance but supported spritecreator and inventory creator. Can save thoes to data and load in

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -91,6 +91,7 @@ Imported = Imported
 #
 MapEditor = Map Editor
 SpriteCreator = Sprite Creator
+InventoryCreator = Inventory Creator
 CustomPanel = Custom Panel
 Cutscenes = Cutscenes
 Dialogue = Dialogue
