#54 Added documentation to several of the classes I've worked on

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -1,3 +1,6 @@
+# Author: Samarth Desai
+# Includes contributions of several other teammates adding to the list of displayed strings that are bound to a current language locale.
+
 #
 # Welcome Screen
 #
@@ -64,8 +67,9 @@ File = File
 Load = Load
 Save = Save
 Import = Import
+Export = Export
 Exit = Exit
-Views = Views
+Viewers = Viewers
 ElementViewer = Element Viewer
 MapViewer = Map Viewer
 Settings = Settings
@@ -97,6 +101,21 @@ Dialogue = Dialogue
 HUD = Heads Up Display
 Inventory = Inventory
 MenuCreator = Menu Creator
+
+#
+#Sprite Creator
+#
+
+CreateSpriteButton=Create Sprite Template
+LoadImageButton=Load Image
+CreateImageButton=Create Image
+BoundingBoxButton=Create Bounding Box
+SpriteTab=sprite
+ImageChooser=Open Image
+NameField=Sprite Name: 
+CategoryField=Sprite Category:
+ConfirmButton=Confirm
+
 #
 # Dialogue Editor
 #
