Fixed the usage of GameDataHandler and passed it appropriately to the different view managers

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -107,14 +107,14 @@ MenuCreator = Menu Creator
 #Sprite Creator
 #
 
-CreateSpriteButton = Create Sprite Template
+CreateSprite = Create Sprite
 LoadImageButton = Load Image
-CreateImageButton = Create Image
+Draw = Draw
 BoundingBoxButton = Create Bounding Box
 SpriteTab = Sprites
 ImageChooser = Open Image
-NameField = Sprite Name: 
-CategoryField = Sprite Category:
+NameField = Name: 
+CategoryField = Category:
 ConfirmButton = Confirm
 
 #
