added cutscene tab button names to properties file

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -120,6 +120,11 @@ InputInteger = Please enter an integer
 InvalidInput = Invalid input
 EnterValid = Enter valid inputs
 #
+# Cutscene Editor
+#
+DefaultCutscenes = Default Cutscenes
+UserCreatedCutscenes = User Created Cutscenes
+#
 # Condition/Action Editor
 #
 EmptyInput = Empty inputs
