--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -68,6 +68,7 @@ Load = Load
 Save = Save
 Import = Import
 Export = Export
+Test = Test
 Exit = Exit
 Viewers = Viewers
 ElementViewer = Element Viewer
