--- a/resources/languages/messages_es.properties
+++ b/resources/languages/messages_es.properties
@@ -40,6 +40,7 @@ Save = Spanish
 Import = Spanish
 Exit = Spanish
 Export = Spanish
+Test = Spanish
 Views = Views
 ElementViewer = Element Viewer
 MapViewer = Map Viewer
