Fixed minor bugs in dialogue creator, included functionality for inventory template

--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -147,6 +147,11 @@ EnterValid = Enter valid inputs
 DefaultCutscenes = Default Cutscenes
 UserCreatedCutscenes = User Created Cutscenes
 #
+# Inventory Editor
+#
+DefaultInventories = Default Inventory
+UserCreatedInventories = User Created Inventory
+#
 # Condition/Action Editor
 #
 
