--- a/resources/languages/messages_en.properties
+++ b/resources/languages/messages_en.properties
@@ -151,6 +151,7 @@ UserCreatedCutscenes = User Created Cutscenes
 #
 DefaultInventories = Default Inventory
 UserCreatedInventories = User Created Inventory
+Clear = Clear
 #
 # Condition/Action Editor
 #
